added some more books but still needs updating

--- a/book/fundamental/03_Fourier_Series.ipynb
+++ b/book/fundamental/03_Fourier_Series.ipynb
@@ -17,10 +17,11 @@
     "%pip install ipympl\n",
     "import numpy as np \n",
     "from matplotlib import pyplot as plt\n",
+    "from matplotlib.ticker import FormatStrFormatter\n",
     "from ipywidgets import * # interactive plots\n",
     "import IPython\n",
     "from IPython.display import Audio, Image\n",
-    "%matplotlib ipympl\n"
+    "%matplotlib ipympl"
    ]
   },
   {
@@ -127,7 +128,6 @@
     "\n",
     "dt = 0.00001 # time spacing\n",
     "t = np.arange(0,2,dt) # range of times to plot on x-axis\n",
-    "# waves, = axes[0].plot([], [])\n",
     "axes[0].set_ylabel('Amplitude', color='k')\n",
     "axes[0].set_xlabel('Time (s)', color='k')\n",
     "axes[0].xaxis.set_major_formatter(FormatStrFormatter('%.3f'))\n",
@@ -155,7 +155,6 @@
     "        Y[:,n] = bn*np.sin(2*np.pi*fo*t)\n",
     "        axes[0].plot(t, Y[:,n])\n",
     "        axes[0].set_title('Individual Sinusoids, n = '+str(n+1))\n",
-    "#         waves.set_data(t, Y[:,n])\n",
     "        \n",
     "    Y_sum = np.sum(Y,axis=1)\n",
     "    sum_waves.set_data(t, Y_sum)\n",
