--- a/book/fundamental/04_Sampling.ipynb
+++ b/book/fundamental/04_Sampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,7 @@
     "import sounddevice as sd\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.collections import LineCollection\n",
+    "from matplotlib.ticker import FormatStrFormatter\n",
     "import IPython\n",
     "from IPython.display import Audio, Image\n",
     "from ipywidgets import interact # interactive plots\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -141,21 +142,15 @@
     "yy_c = np.cos(2*np.pi*f*tt_c) \n",
     "\n",
     "\n",
-    "fig, axes = plt.subplots(figsize=(10, 5)) \n",
+    "fig, axes = plt.subplots() \n",
     "line, = axes.plot([],[],'-o', label='Discrete-time signal, y[n]')\n",
     "axes.plot(tt_c, yy_c,color='red', label='Continuous-time signal, y(t)')\n",
     "axes.set_ylabel('Amplitude', color='k')\n",
     "axes.set_xlabel('Time (s)', color='k')\n",
-    "# axes.xaxis.set_major_formatter(FormatStrFormatter('%.1f'))\n",
-    "# axes.set_xlim([0, 2])\n",
-    "# axes.set_ylim([-1, 1])\n",
+    "axes.xaxis.set_major_formatter(FormatStrFormatter('%.3f'))\n",
     "axes.grid()\n",
     "axes.legend(loc='lower right')\n",
     "\n",
-    "\n",
-    "# Custom formatting function\n",
-    "def format_float(value):\n",
-    "    return f'{value:.6f}'  # Format value to display four decimal places\n",
     "\n",
     "\n",
     "# Create the interactive plot\n",
@@ -164,7 +159,7 @@
     "    fs = 1/Ts # Sampling Frequency (Hz)\n",
     "    tt = np.arange(0,Tend+Ts,Ts) # range of times to plot on x-axis\n",
     "    yy = np.cos(2*np.pi*f*tt) \n",
-    "\n",
+    "    fig.canvas.draw_idle()\n",
     "    line.set_data(tt, yy)\n",
     "    \n",
     "    print('Signal Frequency = '+str(f)+' Hz')\n",
@@ -172,11 +167,7 @@
     "    print('Sampling Frequency = '+str(np.round(fs,decimals=2))+' Hz')\n",
     "    \n",
     "print('Change the sampling period to see the impact')\n",
-    "interact(update, Ts = (0.0001,0.01,0.0001), format=format_float) \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "interact(update, Ts = (0.0001,0.01,0.0001), format=format_float)"
    ]
   },
   {
@@ -487,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +570,7 @@
     "y_cont = make_signal(f1, f2, t_cont)\n",
     "y_disc = make_signal(f1, f2, t)\n",
     "\n",
-    "fig, axes = plt.subplots(3,2,figsize=(10, 6))\n",
+    "fig, axes = plt.subplots(3,2)\n",
     "fig.subplots_adjust(wspace=0.3, hspace=0.8)\n",
     "\n",
     "# \"Continuous time\" signal\n",
@@ -701,26 +692,18 @@
     "    verts_fd_disc=np.c_[freq_disc, np.zeros_like(freq_disc), freq_disc, freq_disc_data].reshape(len(freq_disc),2,2)\n",
     "    col_fd_disc.set_segments(verts_fd_disc)\n",
     "    \n",
+    "    fig.canvas.draw_idle()\n",
     "    print('Sampling Period = '+str(np.round(Ts,decimals=4))+' s')\n",
     "    print('Sampling Frequency = '+str(np.round(1/Ts,decimals=2))+' Hz')\n",
     "\n",
     "print('Change the sampling period to see the impact')\n",
-    "interact(plot_impulse_train, Ts = (Ts_min,0.01,0.0001), format=format_float) \n",
-    "\n",
-    "\n",
-    "\n"
+    "interact(plot_impulse_train, Ts = (Ts_min,0.01,0.0001), format=format_float)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### References\n",
-    "These are some classic books on the basics of digital audio signal processing (DSP), both of which discuss aliasing/sampling of continuous-time signals.\n",
-    "\n",
-    "1. Oppenheim, Alan V., Schafer, Ronald W. and Buck, John R.. Discrete-Time Signal Processing. Second : Prentice-hall Englewood Cliffs, 1999.\n",
-    "2. Oppenheim, Alan V., and A. S. Willsky. Signals and Systems. Prentice Hall, 1982. ISBN: 9780138097318.\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
