--- a/book/fundamental/06_Time_Freq_Analysis.ipynb
+++ b/book/fundamental/06_Time_Freq_Analysis.ipynb
@@ -157,21 +157,18 @@
    ],
    "source": [
     "# Import  signal\n",
-    "fs, y_raw = await read_wav_from_url(url)\n",
-    "\n",
-    "#yy = y_raw[1*fs:3*fs] # Extract a section\n",
+    "fs, yy = await read_wav_from_url(url)\n",
     "yy = yy - np.mean(yy) # Removing the mean of the signal\n",
-    "del y_raw\n",
     "\n",
     "t = np.arange(0,len(yy),1)*(1/fs) # time vector\n",
     "\n",
     "IPython.display.display(Audio(yy.T, rate=fs))\n",
     "      \n",
-    "fig, axes = plt.subplots(figsize=(10, 4)) \n",
+    "fig, axes = plt.subplots() \n",
     "axes.plot(t, yy)\n",
-    "axes.set_title('Bioacoustic Signal')\n",
     "axes.set_xlabel('Time (s)')\n",
-    "axes.set_ylabel('Amplitude')\n"
+    "axes.set_ylabel('Amplitude')\n",
+    "plt.show()"
    ]
   },
   {
@@ -305,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -356,51 +353,13 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "# FFT\n",
-    "\n",
-    "fig, axes = plt.subplots(2,1, figsize=(12, 6)) \n",
-    "wavform, = axes[0].plot([], [])\n",
-    "linefft, = axes[1].plot([], [])\n",
-    "axes[1].set_xlabel('Frequency (Hz)')\n",
-    "axes[1].set_ylabel('Magnitude (dB/Hz)')\n",
-    "axes[1].set_xlim([50, fs//2])\n",
-    "axes[1].set_xscale('log')\n",
-    "axes[1].set_ylim([-40,30])\n",
-    "axes[0].set_ylim([-0.5,0.5])\n",
-    "\n",
-    "\n",
-    "N=1024\n",
-    "print(fs/N)\n",
-    "# # The interactive plot:\n",
-    "def update(start=0, noverlap = 0.5):\n",
-    "\n",
-    "    yy_seg = yy[start:start+N]\n",
-    "    tt_seg = t[start:start+N]\n",
-    "    axes[0].set_xlim([np.min(tt_seg), np.max(tt_seg)])\n",
-    "    \n",
-    "    wavform.set_data(tt_seg,yy_seg)\n",
-    "    Y_fft = np.fft.fft(yy_seg)\n",
-    "    Y_mag = 20*np.log10(np.abs(Y_fft[0:len(yy_seg)//2]))\n",
-    "    freqs = np.fft.fftfreq(len(yy_seg), d=1/fs)\n",
-    "    freqs = freqs[0:len(yy_seg)//2]\n",
-    "    # axes.set_title('FFT with $N$ = '+ str(N)+ ' and noverlap = '+ str(np.round(noverlap,decimals=1)))\n",
-    "    \n",
-    "    linefft.set_data(freqs,Y_mag)\n",
-    "\n",
-    "    IPython.display.display(Audio(yy_seg.T, rate=fs))\n",
-    "    \n",
-    "print('Move the slider to see the spectrogram for different values of nfft and noverlap:')\n",
-    "interact(update, start=(0, len(yy)-N, N), noverlap =(0.1, 0.9,0.1));\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### References\n",
-    "\n",
-    "1. Oppenheim, Alan V., Schafer, Ronald W. and Buck, John R.. Discrete-Time Signal Processing (Ch.9, 10). Second Ed. : Prentice-hall Englewood Cliffs, 1999. \n"
+    "\n"
    ]
   },
   {
