--- a/book/fundamental/06_Time_Freq_Analysis.ipynb
+++ b/book/fundamental/06_Time_Freq_Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 03 - Time Frequency Analysis"
+    "## Time Frequency Analysis"
    ]
   },
   {
