added some more books but still needs updating

--- a/book/fundamental/03_Fourier_Series.ipynb
+++ b/book/fundamental/03_Fourier_Series.ipynb
@@ -38,31 +38,31 @@
     "\n",
     "where the coefficients can be found by evaluating the following integrals\n",
     "\n",
-    "\\begin{align}\n",
+    "$\\begin{align}\n",
     "\ta_n &=  \\frac{2}{T_0}\\int_{t_0}^{t_0+T_0}f(t) \\cos (n\\omega_0 t)~\\text{d}t\\quad \\text{for}~~n=0,1,2,...\\\\\n",
     "\t b_n &=  \\frac{2}{T_0}\\int_{t_0}^{t_0+T_0} f(t) \\sin (n\\omega_0 t)~\\text{d}t\\quad \\text{for}~~n=1,2,...\\\\\n",
-    "\\end{align}\n",
+    "\\end{align}$\n",
     "\n",
     "### Square wave\n",
     "When $f(t)$ is a square wave with a fundamental period, $T_{o}$, we can express it mathematically as\n",
     "\n",
-    "\\begin{align*}\n",
+    "$\\begin{align*}\n",
     "\tf(t) = \\begin{cases} 1 &\\text{for} \\hspace{0.5cm}  0 < t \\leq T_o/2 \\\\ \n",
     "                          -1 & \\text{for} \\hspace{0.5cm}  T_o/2 < t \\leq T_o \\\\  \\end{cases}\n",
-    "\\end{align*}\n",
+    "\\end{align*}$\n",
     "\n",
     "Computing the corresponding Fourier Series coefficients in Trigonometric form yielded \n",
     "\n",
-    "\\begin{align}\n",
+    "$\\begin{align}\n",
     "\ta_n &=  0 \\\\\n",
     "     b_n &= \\frac{2}{n \\pi} \\left[ 1 - (-1)^{n} \\right] = \\begin{cases}4/(n\\pi)&\\text{for}~n~\\text{odd}\\\\0&\\text{for}~n~\\text{even}\\end{cases}\n",
-    "\\end{align}\n",
+    "\\end{align}$\n",
     "\n",
     "\n",
     "Hence the Fourier Series approximation of the square wave $f(t)$ is:\n",
-    "\\begin{align*}\n",
+    "$\\begin{align*}\n",
     "  \tf(t)\\approx \\sum_{n=1}^{\\infty}b_n \\sin (n\\omega_0 t)\n",
-    "\\end{align*}\n",
+    "\\end{align*}$\n",
     "\n",
     "with $b_n$ defined as above. Note how the square wave consists of only odd-integered sinusoidal components. \n",
     "\n",
