added some more books but still needs updating

--- a/book/fundamental/04_Sampling.ipynb
+++ b/book/fundamental/04_Sampling.ipynb
@@ -28,22 +28,21 @@
     }
    ],
    "source": [
-    "# Firstly let us import several of the packages we will need. \n",
-    "# If these packages are not available on your machine, you will have to install them first. \n",
-    "\n",
+    "%pip install ipympl\n",
     "import numpy as np \n",
     "from scipy import signal\n",
-    "import sounddevice as sd\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.collections import LineCollection\n",
-    "from matplotlib.ticker import FormatStrFormatter\n",
     "import IPython\n",
     "from IPython.display import Audio, Image\n",
     "from ipywidgets import interact # interactive plots\n",
     "%matplotlib ipympl\n",
     "\n",
-    "# sd.default.device = 1,0 # This is for setting your audio devices\n",
-    "sd.query_devices()\n"
+    "# Custom formatting function\n",
+    "def format_float(value):\n",
+    "    return f'{value:.6f}'  # Format value to display four decimal places\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -147,7 +146,6 @@
     "axes.plot(tt_c, yy_c,color='red', label='Continuous-time signal, y(t)')\n",
     "axes.set_ylabel('Amplitude', color='k')\n",
     "axes.set_xlabel('Time (s)', color='k')\n",
-    "axes.xaxis.set_major_formatter(FormatStrFormatter('%.3f'))\n",
     "axes.grid()\n",
     "axes.legend(loc='lower right')\n",
     "\n",
@@ -167,7 +165,7 @@
     "    print('Sampling Frequency = '+str(np.round(fs,decimals=2))+' Hz')\n",
     "    \n",
     "print('Change the sampling period to see the impact')\n",
-    "interact(update, Ts = (0.0001,0.01,0.0001), format=format_float)"
+    "interact(update, Ts = (0.0001,0.01,0.0001), format=format_float);"
    ]
   },
   {
