added some more books but still needs updating

--- a/book/fundamental/04_Sampling.ipynb
+++ b/book/fundamental/04_Sampling.ipynb
@@ -161,7 +161,7 @@
     "    line.set_data(tt, yy)\n",
     "    \n",
     "    print('Signal Frequency = '+str(f)+' Hz')\n",
-    "    print('Sampling Period = '+str(np.round(Ts,decimals=4))+' s')\n",
+    "    print('Sampling Period, Ts = '+str(np.round(Ts,decimals=4))+' s')\n",
     "    print('Sampling Frequency = '+str(np.round(fs,decimals=2))+' Hz')\n",
     "    \n",
     "print('Change the sampling period to see the impact')\n",
@@ -691,7 +691,7 @@
     "    col_fd_disc.set_segments(verts_fd_disc)\n",
     "    \n",
     "    fig.canvas.draw_idle()\n",
-    "    print('Sampling Period = '+str(np.round(Ts,decimals=4))+' s')\n",
+    "    print('Sampling Period, Ts = '+str(np.round(Ts,decimals=4))+' s')\n",
     "    print('Sampling Frequency = '+str(np.round(1/Ts,decimals=2))+' Hz')\n",
     "\n",
     "print('Change the sampling period to see the impact')\n",
