--- a/book/fundamental/03_Fourier_Series.ipynb
+++ b/book/fundamental/03_Fourier_Series.ipynb
@@ -170,7 +170,330 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### From the Fourier Series to the Fourier Transform\n",
+    "\n",
+    "Considering the following signal defined over one period as follows:\n",
+    "\n",
+    "$\\begin{equation}\n",
+    "f(t) = \\begin{cases}\n",
+    " 1 & |t| < T_{p} \\\\\n",
+    " 0 & T_{p} < t < T_{o}/2 \\\\\n",
+    " \\end{cases}\n",
+    "\\end{equation}$\n",
+    "\n",
+    "and periodically repeating with period T_{o}. This is a sort of pulse-train type signal. Let's plot it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's plot the periodic signal - taken from here: https://stackoverflow.com/questions/29698213/rectangular-pulse-train-in-python\n",
+    "\n",
+    "\n",
+    "def rect(Tp):\n",
+    "    \"\"\" a function to return a centered rectangular pulse of width Tp \"\"\"\n",
+    "    return lambda t: (-Tp <= t) & (t < Tp)\n",
+    "\n",
+    "def pulse_train(t, at, shape):\n",
+    "    \"\"\"create a train of pulses over t at times at and shape \"\"\"\n",
+    "    return np.sum(shape(t - at[:,np.newaxis]), axis=0)\n",
+    "\n",
+    "\n",
+    "Tp = 0.5 # Pulse Width\n",
+    "To = 2\n",
+    "\n",
+    "fig, axes = plt.subplots()\n",
+    "plt.subplots_adjust(hspace=0.7)\n",
+    "\n",
+    "# Time domain plots\n",
+    "\n",
+    "dt = 0.0001 # time spacing\n",
+    "t = np.arange(-5*To, 5*To, dt) # Range of times to plot \n",
+    "line, = axes.plot([], [], 'k')\n",
+    "vline = axes.axvline(To, color='red', linestyle='--', linewidth=0.8,alpha=0.3)  # Draw horizontal line at y=0\n",
+    "vline2 = axes.axvline(-To, color='red', linestyle='--', linewidth=0.8,alpha=0.3)  # Draw horizontal line at y=0\n",
+    "label1 = axes.text(To-0.2, -1.2, '$T_{o}$', color='red', ha='left', va='bottom', backgroundcolor='white')\n",
+    "label2 = axes.text(-To-0.2, -1.2, '$-T_{o}$', color='red', ha='left', va='bottom', backgroundcolor='white')\n",
+    "\n",
+    "vline3 = axes.axvline(To/2, color='blue', linestyle='--', linewidth=0.8, alpha=0.3)  # Draw horizontal line at y=0\n",
+    "vline4 = axes.axvline(-(To/2), color='blue', linestyle='--', linewidth=0.8, alpha=0.3)  # Draw horizontal line at y=0\n",
+    "label3 = axes.text((To/2)-0.2, -1.2, '$T_{o}/2$', color='blue', ha='left', va='bottom', backgroundcolor='white')\n",
+    "label4 = axes.text(-(To/2)-0.5, -1.2, '$-T_{o}/2$', color='blue', ha='left', va='bottom', backgroundcolor='white')\n",
+    "\n",
+    "vline5 = axes.axvline(Tp, color='grey', linestyle='--', linewidth=0.8)  # Draw horizontal line at y=0\n",
+    "vline6 = axes.axvline(-Tp, color='grey', linestyle='--', linewidth=0.8)  # Draw horizontal line at y=0\n",
+    "\n",
+    "label5 = axes.text(Tp-0.2, -0.7, '$T_{p}$', color='black',  ha='left', va='bottom', backgroundcolor='white')\n",
+    "label6 = axes.text(-Tp-0.2, -0.7, '$-T_{p}$', color='black', ha='left', va='bottom', backgroundcolor='white')\n",
+    "\n",
+    "\n",
+    "axes.set_ylabel('f(t)', color='k')\n",
+    "axes.set_xlabel('Time (s)', color='k')\n",
+    "axes.xaxis.set_major_formatter(FormatStrFormatter('%.1f'))\n",
+    "axes.set_xlim([-5, 5])\n",
+    "axes.set_ylim([-1.5, 2])\n",
+    "axes.set_title('Time Domain', color='k')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def update(To = 2):\n",
+    "    \n",
+    "    # Time domain plots\n",
+    "    \n",
+    "    y = pulse_train(t=t,at=np.arange(-5*To, 5*To, To),shape=rect(Tp))\n",
+    "\n",
+    "    line.set_data(t, y)\n",
+    "    \n",
+    "    vline.set_xdata([To, To])\n",
+    "    vline2.set_xdata([-To, -To])\n",
+    "    label1.set_x(To-0.15)\n",
+    "    label2.set_x(-To-0.15)\n",
+    "    vline3.set_xdata([To/2, To/2])\n",
+    "    vline4.set_xdata([-To/2, -To/2])\n",
+    "    label3.set_x((To/2)-0.2)\n",
+    "    label4.set_x(-(To/2)-0.5)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "print('See how the signal changes as we increase the period:')\n",
+    "interact(update, To = (2,20,0.1)); \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's plot the periodic signal - taken from here: https://stackoverflow.com/questions/29698213/rectangular-pulse-train-in-python\n",
+    "\n",
+    "\n",
+    "def rect(Tp):\n",
+    "    \"\"\" a function to return a centered rectangular pulse of width Tp \"\"\"\n",
+    "    return lambda t: (-Tp <= t) & (t < Tp)\n",
+    "\n",
+    "def pulse_train(t, at, shape):\n",
+    "    \"\"\"create a train of pulses over t at times at and shape \"\"\"\n",
+    "    return np.sum(shape(t - at[:,np.newaxis]), axis=0)\n",
+    "\n",
+    "\n",
+    "Tp = 0.5 # Pulse Width\n",
+    "\n",
+    "fig, axes = plt.subplots(2,1)\n",
+    "plt.subplots_adjust(hspace=0.7)\n",
+    "\n",
+    "# Time domain plots\n",
+    "\n",
+    "dt = 0.0001 # time spacing\n",
+    "t = np.arange(-5*To, 5*To, dt) # Range of times to plot \n",
+    "line, = axes[0].plot([], [], 'k')\n",
+    "vline = axes[0].axvline(To, color='red', linestyle='--', linewidth=0.8,alpha=0.3)  # Draw horizontal line at y=0\n",
+    "vline2 = axes[0].axvline(-To, color='red', linestyle='--', linewidth=0.8,alpha=0.3)  # Draw horizontal line at y=0\n",
+    "label1 = axes[0].text(To-0.2, -1.2, '$T_{o}$', color='red', ha='left', va='bottom', backgroundcolor='white')\n",
+    "label2 = axes[0].text(-To-0.2, -1.2, '$-T_{o}$', color='red', ha='left', va='bottom', backgroundcolor='white')\n",
+    "\n",
+    "vline3 = axes[0].axvline(To/2, color='blue', linestyle='--', linewidth=0.8, alpha=0.3)  # Draw horizontal line at y=0\n",
+    "vline4 = axes[0].axvline(-(To/2), color='blue', linestyle='--', linewidth=0.8, alpha=0.3)  # Draw horizontal line at y=0\n",
+    "label3 = axes[0].text((To/2)-0.2, -1.2, '$T_{o}/2$', color='blue', ha='left', va='bottom', backgroundcolor='white')\n",
+    "label4 = axes[0].text(-(To/2)-0.5, -1.2, '$-T_{o}/2$', color='blue', ha='left', va='bottom', backgroundcolor='white')\n",
+    "\n",
+    "vline5 = axes[0].axvline(Tp, color='grey', linestyle='--', linewidth=0.8)  # Draw horizontal line at y=0\n",
+    "vline6 = axes[0].axvline(-Tp, color='grey', linestyle='--', linewidth=0.8)  # Draw horizontal line at y=0\n",
+    "\n",
+    "label5 = axes[0].text(Tp-0.2, -0.7, '$T_{p}$', color='black',  ha='left', va='bottom', backgroundcolor='white')\n",
+    "label6 = axes[0].text(-Tp-0.2, -0.7, '$-T_{p}$', color='black', ha='left', va='bottom', backgroundcolor='white')\n",
+    "\n",
+    "\n",
+    "axes[0].set_ylabel('f(t)', color='k')\n",
+    "axes[0].set_xlabel('Time (s)', color='k')\n",
+    "axes[0].xaxis.set_major_formatter(FormatStrFormatter('%.1f'))\n",
+    "axes[0].set_xlim([-5, 5])\n",
+    "axes[0].set_ylim([-1.5, 2])\n",
+    "axes[0].set_title('Time Domain', color='k')\n",
+    "\n",
+    "\n",
+    "# Freq domain plots\n",
+    "\n",
+    "f_int = np.arange(-100, 101, 1) # Range of integer frequencies to plot\n",
+    "T_ak = np.zeros(len(f_int))\n",
+    "\n",
+    "markers, = axes[1].plot([],[], ls=\"none\", marker=\"o\")\n",
+    "baseline = axes[1].axhline(0, color=\"grey\")\n",
+    "\n",
+    "verts=np.c_[f_int, np.zeros_like(f_int), f_int, T_ak].reshape(len(T_ak),2,2)\n",
+    "col = matplotlib.collections.LineCollection(verts)\n",
+    "axes[1].add_collection(col)\n",
+    "\n",
+    "\n",
+    "line_Freq, = axes[1].plot([], [], 'b')\n",
+    "axes[1].set_xlim([-2*4*np.pi, 2*4*np.pi])\n",
+    "#axes[1].set_xlim([-4.1*np.pi, 4.1*np.pi])\n",
+    "axes[1].set_ylim([-0.5, 1.2])\n",
+    "axes[1].set_ylabel('$T_o  c_n$', color='k')\n",
+    "axes[1].set_xlabel('$\\omega$ (rad/s)', color='k')\n",
+    "axes[1].set_title('Frequency Domain', color='k')\n",
+    "\n",
+    "def update(To = 2):\n",
+    "    \n",
+    "    # Time domain plots\n",
+    "    \n",
+    "    y = pulse_train(t=t,at=np.arange(-5*To, 5*To, To),shape=rect(Tp))\n",
+    "\n",
+    "    line.set_data(t, y)\n",
+    "    \n",
+    "    vline.set_xdata([To, To])\n",
+    "    vline2.set_xdata([-To, -To])\n",
+    "    label1.set_x(To-0.15)\n",
+    "    label2.set_x(-To-0.15)\n",
+    "    vline3.set_xdata([To/2, To/2])\n",
+    "    vline4.set_xdata([-To/2, -To/2])\n",
+    "    label3.set_x((To/2)-0.2)\n",
+    "    label4.set_x(-(To/2)-0.5)\n",
+    "    \n",
+    "    \n",
+    "    # Frequency Domain plots\n",
+    "    wo = (2*np.pi)/To\n",
+    "    \n",
+    "    for n in range(len(f_int)):\n",
+    "        k = f_int[n]\n",
+    "        if k == 0:\n",
+    "            T_ak[n] = (2*Tp)\n",
+    "        else:\n",
+    "            T_ak[n] = (2*np.sin(k*wo*Tp))/(k*wo)\n",
+    "    \n",
+    "    markers.set_data(f_int*wo, T_ak)\n",
+    "    verts=np.c_[f_int*wo, np.zeros_like(f_int*wo), f_int*wo, T_ak].reshape(len(f_int*wo),2,2)\n",
+    "    col.set_segments(verts)\n",
+    "    \n",
+    "#     line_Freq.set_data(f_int*wo, T_ak)\n",
+    "    \n",
+    "\n",
+    "print('See how the signal changes as we increase the period:')\n",
+    "interact(update, To = (2,20,0.1)); \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's plot the periodic signal - taken from here: https://stackoverflow.com/questions/29698213/rectangular-pulse-train-in-python\n",
+    "\n",
+    "\n",
+    "def rect(Tp):\n",
+    "    \"\"\" a function to return a centered rectangular pulse of width Tp \"\"\"\n",
+    "    return lambda t: (-Tp <= t) & (t < Tp)\n",
+    "\n",
+    "def pulse_train(t, at, shape):\n",
+    "    \"\"\"create a train of pulses over t at times at and shape \"\"\"\n",
+    "    return np.sum(shape(t - at[:,np.newaxis]), axis=0)\n",
+    "\n",
+    "\n",
+    "Tp = 0.5 # Pulse Width\n",
+    "\n",
+    "fig, axes = plt.subplots(2,1)\n",
+    "plt.subplots_adjust(hspace=0.7)\n",
+    "\n",
+    "# Time domain plots\n",
+    "\n",
+    "dt = 0.0001 # time spacing\n",
+    "t = np.arange(-5*To, 5*To, dt) # Range of times to plot \n",
+    "line, = axes[0].plot([], [], 'k')\n",
+    "# vline = axes[0].axvline(To, color='red', linestyle='--', linewidth=0.8,alpha=0.3)  # Draw horizontal line at y=0\n",
+    "# vline2 = axes[0].axvline(-To, color='red', linestyle='--', linewidth=0.8,alpha=0.3)  # Draw horizontal line at y=0\n",
+    "# label1 = axes[0].text(To-0.2, -1.2, '$T_{o}$', color='red', ha='left', va='bottom', backgroundcolor='white')\n",
+    "# label2 = axes[0].text(-To-0.2, -1.2, '$-T_{o}$', color='red', ha='left', va='bottom', backgroundcolor='white')\n",
+    "\n",
+    "# vline3 = axes[0].axvline(To/2, color='blue', linestyle='--', linewidth=0.8, alpha=0.3)  # Draw horizontal line at y=0\n",
+    "# vline4 = axes[0].axvline(-(To/2), color='blue', linestyle='--', linewidth=0.8, alpha=0.3)  # Draw horizontal line at y=0\n",
+    "# label3 = axes[0].text((To/2)-0.2, -1.2, '$T_{o}/2$', color='blue', ha='left', va='bottom', backgroundcolor='white')\n",
+    "# label4 = axes[0].text(-(To/2)-0.5, -1.2, '$-T_{o}/2$', color='blue', ha='left', va='bottom', backgroundcolor='white')\n",
+    "\n",
+    "# vline5 = axes[0].axvline(Tp, color='grey', linestyle='--', linewidth=0.8)  # Draw horizontal line at y=0\n",
+    "# vline6 = axes[0].axvline(-Tp, color='grey', linestyle='--', linewidth=0.8)  # Draw horizontal line at y=0\n",
+    "\n",
+    "# label5 = axes[0].text(Tp-0.2, -0.7, '$T_{p}$', color='black',  ha='left', va='bottom', backgroundcolor='white')\n",
+    "# label6 = axes[0].text(-Tp-0.2, -0.7, '$-T_{p}$', color='black', ha='left', va='bottom', backgroundcolor='white')\n",
+    "\n",
+    "\n",
+    "axes[0].set_ylabel('f(t)', color='k')\n",
+    "axes[0].set_xlabel('Time (s)', color='k')\n",
+    "axes[0].xaxis.set_major_formatter(FormatStrFormatter('%.1f'))\n",
+    "axes[0].set_xlim([-5, 5])\n",
+    "axes[0].set_ylim([-1.5, 2])\n",
+    "axes[0].set_title('Time Domain', color='k')\n",
+    "\n",
+    "\n",
+    "# Freq domain plots\n",
+    "\n",
+    "f_int = np.arange(-100, 101, 1) # Range of integer frequencies to plot\n",
+    "T_ak = np.zeros(len(f_int))\n",
+    "\n",
+    "markers, = axes[1].plot([],[], ls=\"none\", marker=\"o\")\n",
+    "baseline = axes[1].axhline(0, color=\"grey\")\n",
+    "\n",
+    "# verts=np.c_[f_int, np.zeros_like(f_int), f_int, T_ak].reshape(len(T_ak),2,2)\n",
+    "# col = LineCollection(verts)\n",
+    "# axes[1].add_collection(col)\n",
+    "\n",
+    "\n",
+    "line_Freq, = axes[1].plot([], [], 'b')\n",
+    "axes[1].set_xlim([-2*4*np.pi, 2*4*np.pi])\n",
+    "#axes[1].set_xlim([-4.1*np.pi, 4.1*np.pi])\n",
+    "axes[1].set_ylim([-0.7, 4])\n",
+    "axes[1].set_ylabel('$T_o  c_n$', color='k')\n",
+    "axes[1].set_xlabel('$\\omega$ (rad/s)', color='k')\n",
+    "axes[1].set_title('Frequency Domain', color='k')\n",
+    "\n",
+    "def update(Tp = 0.5):\n",
+    "    \n",
+    "    # Time domain plots\n",
+    "    To = 20\n",
+    "    \n",
+    "    y = pulse_train(t=t,at=np.arange(-5*To, 5*To, To),shape=rect(Tp))\n",
+    "\n",
+    "    line.set_data(t, y)\n",
+    "    \n",
+    "#     vline.set_xdata([To, To])\n",
+    "#     vline2.set_xdata([-To, -To])\n",
+    "#     label1.set_x(To-0.15)\n",
+    "#     label2.set_x(-To-0.15)\n",
+    "#     vline3.set_xdata([To/2, To/2])\n",
+    "#     vline4.set_xdata([-To/2, -To/2])\n",
+    "#     label3.set_x((To/2)-0.2)\n",
+    "#     label4.set_x(-(To/2)-0.5)\n",
+    "    \n",
+    "    \n",
+    "    # Frequency Domain plots\n",
+    "    wo = (2*np.pi)/To\n",
+    "    \n",
+    "    for n in range(len(f_int)):\n",
+    "        k = f_int[n]\n",
+    "        if k == 0:\n",
+    "            T_ak[n] = (2*Tp)\n",
+    "        else:\n",
+    "            T_ak[n] = (2*np.sin(k*wo*Tp))/(k*wo)\n",
+    "    \n",
+    "#     markers.set_data(f_int*wo, T_ak)\n",
+    "#     verts=np.c_[f_int*wo, np.zeros_like(f_int*wo), f_int*wo, T_ak].reshape(len(f_int*wo),2,2)\n",
+    "#     col.set_segments(verts)\n",
+    "    \n",
+    "    line_Freq.set_data(f_int*wo, T_ak)\n",
+    "    \n",
+    "\n",
+    "print('See how the spectrum changes as we compress/expand signal:')\n",
+    "interact(update, Tp = (0.5,2,0.1)); \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
