--- a/book/fundamental/04_Sampling.ipynb
+++ b/book/fundamental/04_Sampling.ipynb
@@ -36,11 +36,23 @@
     "import IPython\n",
     "from IPython.display import Audio, Image\n",
     "from ipywidgets import interact # interactive plots\n",
+    "import io\n",
+    "from scipy.io import wavfile\n",
+    "from pyodide.http import pyfetch\n",
     "%matplotlib ipympl\n",
     "\n",
     "# Custom formatting function\n",
     "def format_float(value):\n",
     "    return f'{value:.6f}'  # Format value to display four decimal places\n",
+    "\n",
+    "# function for importing wav files \n",
+    "whistle_24k = \"https://raw.githubusercontent.com/randyaliased/acspjbook/main/book/audio/whistle_24k.wav\"\n",
+    "whistle_3k = \"https://raw.githubusercontent.com/randyaliased/acspjbook/main/book/audio/whistle_3k.wav\"\n",
+    "\n",
+    "async def read_wav_from_url(url):\n",
+    "    response = await pyfetch(url)\n",
+    "    wav_bytes = await response.bytes()  # get raw binary\n",
+    "    return wavfile.read(io.BytesIO(wav_bytes))\n",
     "\n",
     "\n"
    ]
@@ -185,32 +197,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "recording...\n",
-      "recording completed\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Run this block and play your signal to record it.\n",
-    "# We are recording at 24 kHz\n",
-    "\n",
-    "\n",
-    "duration = 3  # seconds\n",
-    "fs = 24000    # Sampling frequency (Hz)\n",
-    "print ('recording...')\n",
-    "whistle = sd.rec(duration * fs, blocking=True,samplerate=fs, channels=1)\n",
-    "print ('recording completed')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -219,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -274,6 +260,9 @@
     }
    ],
    "source": [
+    "fs, whistle = await read_wav_from_url(whistle_24k)\n",
+    "t = np.arange(0,len(whistle),1)*(1/fs) # time vector    \n",
+    "\n",
     "print(\"Data shape: \", whistle.shape)\n",
     "print(\"Whistle sampled at 24 kHz:\")\n",
     "IPython.display.display(Audio(whistle.T, rate=fs))\n",
@@ -332,29 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "recording...\n",
-      "finished recording\n"
-     ]
-    }
-   ],
-   "source": [
-    "duration = 3  # seconds\n",
-    "fs = 3000    # Sampling frequency (Hz)\n",
-    "print ('recording...')\n",
-    "whistle = sd.rec(duration * fs, blocking=True,samplerate=fs, channels=1)\n",
-    "print ('finished recording')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -409,6 +376,9 @@
     }
    ],
    "source": [
+    "fs, whistle = await read_wav_from_url(whistle_3k)\n",
+    "t = np.arange(0,len(whistle),1)*(1/fs) # time vector\n",
+    "\n",
     "print(\"Data shape: \", whistle.shape)\n",
     "print(\"Whistle sampled at 4 kHz:\")\n",
     "IPython.display.display(Audio(whistle.T, rate=fs))\n",
