--- a/book/fundamental/03_Fourier_Series.ipynb
+++ b/book/fundamental/03_Fourier_Series.ipynb
@@ -166,14 +166,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### From the Fourier Series to the Fourier Transform\n",
     "\n",
     "Considering the following signal defined over one period as follows:\n",
+    "\n",
     "\n",
     "$\\begin{equation}\n",
     "f(t) = \\begin{cases}\n",
@@ -246,7 +245,7 @@
     "    # Time domain plots\n",
     "    \n",
     "    y = pulse_train(t=t,at=np.arange(-5*To, 5*To, To),shape=rect(Tp))\n",
-    "\n",
+    "    fig.canvas.draw_idle()\n",
     "    line.set_data(t, y)\n",
     "    \n",
     "    vline.set_xdata([To, To])\n",
@@ -345,7 +344,7 @@
     "    # Time domain plots\n",
     "    \n",
     "    y = pulse_train(t=t,at=np.arange(-5*To, 5*To, To),shape=rect(Tp))\n",
-    "\n",
+    "    fig.canvas.draw_idle()\n",
     "    line.set_data(t, y)\n",
     "    \n",
     "    vline.set_xdata([To, To])\n",
@@ -460,7 +459,7 @@
     "    To = 20\n",
     "    \n",
     "    y = pulse_train(t=t,at=np.arange(-5*To, 5*To, To),shape=rect(Tp))\n",
-    "\n",
+    "    fig.canvas.draw_idle()\n",
     "    line.set_data(t, y)\n",
     "    \n",
     "#     vline.set_xdata([To, To])\n",
